# Multivoid

./: .gitignore  .gitmodules  BUILDING.md  CLAUDE.md  README.md  mp_client2_connect.bat  mp_client_connect.bat  mp_host_game.bat  mp_smoke4.bat  play-coop.bat  shot.bat  stop-coop.bat
docs/: ARCHITECTURE.md  AUTHORITATIVE_INTERACTABLE_MIGRATION.md  AUTONOMOUS_TESTING.md  COOP_CLIENT_MODEL.md  COOP_DISPATCH_VISIBILITY.md  COOP_ENTITY_EXPRESSION_MAP.md  COOP_EVENT_JOIN.md  COOP_INSTANT_WORLD_TWO_LAYER.md  COOP_METHODOLOGY.md  COOP_MIRROR_IDENTITY_WINDOW_RACE.md  COOP_RNG_AUTHORITY.md  COOP_SCOPE.md  COOP_SERVER_MODEL.md  COOP_STABLE_ID_SIDECAR.md  COOP_SYNCER_MODEL.md  COOP_SYNC_MAP.md  COOP_SYNC_PROFILES.md  COOP_VM_DISPATCH_PLAN.md  COOP_WORLD_PROP_DIVERGENCE.md  DEVS_GAUNTLET.md  FEASIBILITY.md  LESSONS.md  MODULARIZATION_PLAN.md  MULTIPLAYER_UI.md  OPUS_48_DISCIPLINE.md  RELEASE.md  RE_WORKFLOW.md  ROADMAP.md  VERSION_PORTABILITY.md
memory/: project_clump_convert_v52_2026-06-09.md
release/: votv-coop.ini
research/: handson_runbook_2026-06-21_proxy_phase1.md  handson_runbook_2026-06-21_repile_thunk.md  handson_runbook_2026-06-22_closeb_carry.md  handson_runbook_2026-06-22_regression_and_harness.md  handson_runbook_2026-06-22_throw_arc_probe.md  handson_runbook_2026-06-22_throw_rotation_sound.md  handson_runbook_2026-06-22_v83_scale_interp.md  handson_runbook_2026-06-22_zoffset_leveldup.md  handson_runbook_2026-06-23_L1_orphan_census.md  handson_runbook_2026-06-23_pile_1c_dup.md  handson_runbook_2026-06-24_COMBINED_instantworld_and_reverify.md  handson_runbook_2026-06-24_kerfur_forward_census.md  handson_runbook_2026-06-24_mirror_identity_extract_reverify.md  handson_runbook_2026-06-25_floor_WIPE_proof.md  handson_runbook_2026-06-25_phase0_floor_overdestroy.md  handson_runbook_2026-06-26_3_grab_release.md  handson_runbook_2026-06-26_joinwindow_1_2.md  handson_runbook_2026-06-27_purge_fix_combined.md  handson_runbook_2026-06-27_purge_probe.md  handson_runbook_2026-06-27_purge_v1_combined.md  handson_runbook_2026-06-27_variant1_forcechurn.md  handson_runbook_2026-06-28_D1D2_freshfix.md  handson_runbook_2026-06-28_whole_module.md  handson_runbook_2026-06-29_kerfur_deterministic_eid.md  handson_runbook_2026-06-29_kerfur_double_and_5of6.md  handson_runbook_2026-06-29_kerfur_keybind.md  handson_runbook_2026-06-30_destroy_before_load.md  handson_runbook_2026-06-30_kerfur_delivery_5v6.md  handson_runbook_2026-07-01_dup_probe.md  handson_runbook_2026-07-01_ehh_fps.md  handson_runbook_2026-07-01_massmove_dup.md  handson_runbook_2026-07-01_pile_sounds.md  handson_runbook_2026-07-02_clientmodel_tex.md  handson_runbook_2026-07-02_evening_fixes.md  handson_runbook_2026-07-02_head_gate.md  handson_runbook_2026-07-03_devtools.md  handson_runbook_2026-07-03_eventfire.md  handson_runbook_2026-07-03_masterpose.md  handson_runbook_2026-07-03_rebind_thread.md  handson_runbook_2026-07-03_skin_effects.md  (+14 more)
tools/: README.md  bp_reflect.py  brightness.ps1  capture-kerfur-repro.ps1  capture-pile-shots.ps1  capture-showcase.ps1  capture-window.ps1  capture_window.ps1  cert_check.py  connect_fail_probe.py  coop_master_server.py  coop_signaling_server.py  coverage.py  deploy-all.ps1  deploy-loader.ps1  deploy-probe.ps1  diag-launch-state.ps1  host_save_picker_probe.py  inject.ps1  install-ue4ss.ps1  interp_trail_probe.py  kerfur-delivery-assert.ps1  lan-test.ps1  maprva.py  master_fetch_probe.py  master_smoke.py  (+19 more)
tools/coop-server-rs/: Cargo.toml
tools/coop-server-rs/src/: common.rs  lib.rs  tls.rs
(+1111 files in other folders)
